plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.13'
    id 'org.beryx.runtime' version '1.12.7'
}

group = 'com.wazixwx'
version = '1.0.0'

repositories {
    maven { url 'https://mirrors.cloud.tencent.com/gradle/' }
    maven { url 'https://services.gradle.org/distributions/' }
    mavenCentral()
    gradlePluginPortal()
}

javafx {
    version = '21.0.1'
    modules = ['javafx.controls', 'javafx.fxml', 'javafx.web']
}

dependencies {
    implementation 'org.jetbrains:annotations:24.1.0'
    implementation 'com.google.code.gson:gson:2.11.0'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'commons-io:commons-io:2.15.1'
    implementation 'org.slf4j:slf4j-api:2.0.9'
    implementation 'ch.qos.logback:logback-classic:1.4.14'
    implementation 'org.json:json:20240303'
    
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
}

application {
    mainClass = 'com.wazixwx.launcher.Main'
}

runtime {
    options = ['--strip-native-commands', '--no-header-files', '--no-man-pages']
    
    launcher {
        noConsole = true
    }
    
    jpackage {
        // Windows
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            imageOptions = ['--win-console']
            installerOptions = ['--win-dir-chooser']
        }
        // macOS
        else if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
            imageOptions = ['--mac-package-name', 'WaZi-Minecraft-Launcher']
            installerOptions = ['--mac-package-identifier', 'com.wazixwx.launcher']
        }
        // Linux
        else {
            imageOptions = ['--linux-shortcut']
            installerOptions = ['--linux-menu-group', 'Game']
        }
    }
}

test {
    useJUnitPlatform()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

compileJava {
    options.encoding = 'UTF-8'
    options.release = 17 // 兼容性发布版本 | Compatibility release version
}

tasks.withType(JavaCompile) {
    options.compilerArgs += ['--enable-preview']
} 
